--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -5,8 +5,12 @@
     "pages/new/new",
     "pages/wish/wish",
     "pages/mine/mine",
-    "pages/mine/personal",
-    "pages/mine/order",
+    "pages/mine/personal/personal",
+    "pages/mine/order/order",
+    "pages/classify/strayAnimal/strayAnimal",
+    "pages/classify/petFostering/petFostering",
+    "pages/classify/petTransfer/petTransfer",
+    "pages/details/details",
     "pages/userConsole/userConsole",
     "pages/storageConsole/storageConsole",
     "pages/databaseGuide/databaseGuide",
