--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,6 +7,9 @@
     "pages/mine/mine",
     "pages/mine/personal/personal",
     "pages/mine/order/order",
+    "pages/mine/personal/userName/userName",
+    "pages/mine/personal/addressList/addressList",
+    "pages/mine/personal/addressList/address/address",
     "pages/classify/strayAnimal/strayAnimal",
     "pages/classify/petFostering/petFostering",
     "pages/classify/petTransfer/petTransfer",
