--- a/project.private.config.json
+++ b/project.private.config.json
@@ -37,8 +37,21 @@
           "scene": null
         },
         {
-          "name": "个人信息",
-          "pathName": "pages/mine/personal/personal",
+          "name": "地址列表",
+          "pathName": "pages/mine/personal/addressList/addressList",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "地址",
+          "pathName": "pages/mine/personal/addressList/address/address",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "已发布",
+          "pathName": "pages/mine/released/released",
+          "query": "",
           "scene": null
         }
       ]
