--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,13 +1,14 @@
 {
 
   "pages": [
-    "pages/load/load",
+    
     "pages/index/index",
     "pages/classify/classify",
     "pages/new/new",
     "pages/wish/wish",
     "pages/mine/mine",
-    
+    "pages/load/load",
+    "pages/index/search/search",
     "pages/mine/personal/personal",
     "pages/mine/order/order",
     "pages/mine/released/released",
