创建领养单

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -32,7 +32,7 @@
         },
         {
           "name": "详情页",
-          "pathName": "pages/details/details",
+          "pathName": "pages/msgDetails/msgDetails",
           "query": "",
           "scene": null
         },
@@ -64,6 +64,11 @@
           "name": "领养单",
           "pathName": "pages/mine/order/order",
           "query": "",
+          "scene": null
+        },
+        {
+          "name": "创建领养单",
+          "pathName": "pages/createOrder/createOrder",
           "scene": null
         }
       ]
