发布新动态 分类返回顶部

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -39,6 +39,12 @@
         {
           "name": "pages/createOrder/createOrder",
           "pathName": "pages/createOrder/createOrder",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/classify/classify",
+          "pathName": "pages/classify/classify",
           "scene": null
         }
       ]
